--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
-pip install pyrebase
-pip install newsapi
+certifi==2019.11.28
+chardet==3.0.4
+gcloud==0.17.0
+googleapis-common-protos==1.51.0
+httplib2==0.17.0
+idna==2.9
+jws==0.1.3
+newsapi-python==0.2.6
+oauth2client==3.0.0
+pkg-resources==0.0.0
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycryptodome==3.4.3
+Pyrebase==3.0.27
+python-jwt==2.0.1
+requests==2.11.1
+requests-toolbelt==0.7.0
+rsa==4.0
+six==1.14.0
+urllib3==1.25.8
