--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ idna==2.9
 jws==0.1.3
 multidict==4.7.5
 newsapi-python==0.2.6
+nltk==3.4.5
 numpy==1.18.2
 oauth2client==3.0.0
 pandas==1.0.3
@@ -44,4 +45,3 @@ soupsieve==2.0
 twint==2.1.16
 urllib3==1.25.8
 yarl==1.4.2
-
