--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animejs": "^3.1.0",
-    "matter-js": "^0.14.2",
+    "re-resizable": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-wordcloud": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
