--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animejs": "^3.1.0",
+    "bootstrap": "^4.4.1",
     "re-resizable": "^6.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-wordcloud": "^1.2.2"
