--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
     "react-wordcloud": "^1.2.2"
   },
   "scripts": {
