--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ nltk==3.4.5
 numpy==1.18.2
 oauth2client==3.0.0
 pandas==1.0.3
-pkg-resources==0.0.0
+#pkg-resources==0.0.0
 protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -44,4 +44,5 @@ six==1.14.0
 soupsieve==2.0
 twint==2.1.16
 urllib3==1.25.8
+xlml==1.0
 yarl==1.4.2
