--- a/requirements_ml.txt
+++ b/requirements_ml.txt
@@ -44,12 +44,13 @@ qtconsole==4.5.2
 requests==2.22.0
 Send2Trash==1.5.0
 six==1.12.0
-scipy=1.4.1
+scikit-learn=0.22.2.post1
 spacy==2.1.6
 srsly==0.0.7
 terminado==0.8.2
 testpath==0.4.2
 thinc==7.0.8
+torch==1.4.0
 tornado==6.0.3
 tqdm==4.32.2
 traitlets==4.3.2
