--- a/requirements_ml.txt
+++ b/requirements_ml.txt
@@ -59,3 +59,14 @@ wasabi==0.2.2
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.5.0
+
+oto3==1.12.31 
+botocore==1.15.31 
+click==7.1.1 
+docutils==0.15.2 
+jmespath==0.9.5 
+pytorch-transformers==1.2.0 
+regex==2020.2.20 
+s3transfer==0.3.3 
+sacremoses==0.0.38 
+sentencepiece==0.1.85
